syntax = "proto3";

package fintekkers.models.util;

message DecimalValueProto {
//  uint32 scale = 1;

  //An integer serialized in little endian form.
//  bytes value = 3;

  //This is a string representation of a float number.
  //This will be deprecated in the future for a more space efficient approach
  string arbitrary_precision_value = 10;
}
